--- a/charts/vaas/gateway/templates/deployment.yaml
+++ b/charts/vaas/gateway/templates/deployment.yaml
@@ -1,16 +1,18 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: {{ include "vaas-helm.fullname" . }}
+  name: {{ include "gateway.fullname" . }}
   labels:
-    {{- include "vaas-helm.labels" . | nindent 4 }}
+    {{- include "gateway.labels" . | nindent 4 }}
 spec:
+  serviceName: {{ include "gateway.fullname" . }}
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
-      {{- include "vaas-helm.selectorLabels" . | nindent 6 }}
+      {{- include "gateway.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,35 +20,54 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "vaas-helm.selectorLabels" . | nindent 8 }}
+        {{- include "gateway.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "vaas-helm.serviceAccountName" . }}
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      serviceAccountName: {{ include "gateway.serviceAccountName" . }}
+      volumes:
+          {{- if .Values.gateway.auth.enabled }}
+        - name: gateway-extra-appsettings
+          configMap:
+            name: gateway-extra-appsettings
+            items:
+            - key: "appsettings.{{ .Release.Name }}.json"
+              path: "appsettings.{{ .Release.Name }}.json"
+          {{- end }}
+          {{- if .Values.gateway.containerSecurityContext.enabled }}
+        - name: gateway-tmp
+          emptyDir: {}
+          {{- end }}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: {{ include "gateway.name" . }}
           securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+            {{- toYaml .Values.gateway.containerSecurityContext | nindent 12 }}
+          image: '{{ .Values.gateway.image.repository }}:{{ .Values.gateway.image.tag | default "latest" }}'
+          imagePullPolicy: {{ .Values.gateway.image.pullPolicy }}
+          {{- if .Values.gateway.auth.enabled }}
+          volumeMounts:
+          - mountPath: "/data/appsettings.{{ .Release.Name }}.json"
+            subPath:  "appsettings.{{ .Release.Name }}.json"
+            name: gateway-extra-appsettings
+          - mountPath: /tmp
+            name: gateway-temp
+          {{- end }}
+          env:
+            {{- range $key, $value := include "gateway.extractEnvVars" . }}
+            - name: {{ $key }}
+              value: {{ $value | quote }}
+            {{- end }}
           ports:
-            - name: http
-              containerPort: 80
+            - name: ws
+              containerPort: 9090
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+            - name: http
+              containerPort: 8080
+              protocol: TCP
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+            {{- toYaml .Values.gateway.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
