--- a/charts/vaas/gateway/templates/service.yaml
+++ b/charts/vaas/gateway/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "vaas-helm.fullname" . }}
+  name: {{ include "gateway.fullname" . }}
   labels:
-    {{- include "vaas-helm.labels" . | nindent 4 }}
+    {{- include "gateway.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "vaas-helm.selectorLabels" . | nindent 4 }}
+    {{- include "gateway.selectorLabels" . | nindent 4 }}
