--- a/charts/vaas/gateway/templates/service.yaml
+++ b/charts/vaas/gateway/templates/service.yaml
@@ -5,11 +5,17 @@ metadata:
   labels:
     {{- include "gateway.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.gateway.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.gateway.service.http.port }}
       targetPort: http
       protocol: TCP
       name: http
+      {{- if .Values.gateway.ws.enabled }}
+    - port: {{ .Values.gateway.service.ws.port }}
+      targetPort: ws
+      protocol: TCP
+      name: ws
+      {{- end }}  
   selector:
     {{- include "gateway.selectorLabels" . | nindent 4 }}
