add more to charts

--- a/charts/vaas/gateway/templates/ingress.yaml
+++ b/charts/vaas/gateway/templates/ingress.yaml
@@ -1,3 +1,4 @@
+#TODO: Check if Values in range are correct
 {{- if .Values.gateway.ingress.enabled -}}
 {{- $fullName := include "gateway.fullname" . -}}
 {{- if and .Values.gateway.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
