--- a/charts/vaas/gateway/templates/deployment.yaml
+++ b/charts/vaas/gateway/templates/deployment.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.gateway.ws.enabled | not }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,7 +15,7 @@ spec:
       {{- include "gateway.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
+      {{- with .Values.podAnnotations }}Values.gateway.ingress
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
@@ -78,4 +77,3 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-{{- end }}
