--- a/charts/vaas/templates/gateway/servicemonitor.yaml
+++ b/charts/vaas/templates/gateway/servicemonitor.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.metrics.enabled }}
+{{- if .Values.gateway.metrics.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
