--- a/charts/vaas/templates/gateway/statefulset.yaml
+++ b/charts/vaas/templates/gateway/statefulset.yaml
@@ -1,41 +1,32 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: {{ include "gateway.fullname" . }}
   labels:
     {{- include "gateway.labels" . | nindent 4 }}
 spec:
   serviceName: {{ include "gateway.fullname" . }}
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
+  {{- if not .Values.gateway.autoscaling.enabled }}
+  replicas: {{ .Values.gateway.replicaCount }}
   {{- end }}
-  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
+  revisionHistoryLimit: {{ .Values.gateway.revisionHistoryLimit }}
   selector:
     matchLabels:
       {{- include "gateway.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}Values.gateway.ingress
+      {{- with .Values.gateway.podAnnotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
         {{- include "gateway.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.imagePullSecrets }}
+      {{- with .Values.gateway.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "gateway.serviceAccountName" . }}
       volumes:
-          {{- if .Values.gateway.auth.enabled }}
-        - name: gateway-extra-appsettings
-          configMap:
-            name: gateway-extra-appsettings
-            items:
-            - key: "appsettings.{{ .Release.Name }}.json"
-              path: "appsettings.{{ .Release.Name }}.json"
-          {{- end }}
           {{- if .Values.gateway.containerSecurityContext.enabled }}
         - name: gateway-tmp
           emptyDir: {}
@@ -46,34 +37,29 @@ spec:
             {{- toYaml .Values.gateway.containerSecurityContext | nindent 12 }}
           image: '{{ .Values.gateway.image.repository }}:{{ .Values.gateway.image.tag | default "latest" }}'
           imagePullPolicy: {{ .Values.gateway.image.pullPolicy }}
-          {{- if .Values.gateway.auth.enabled }}
           volumeMounts:
-          - mountPath: "/data/appsettings.{{ .Release.Name }}.json"
-            subPath:  "appsettings.{{ .Release.Name }}.json"
-            name: gateway-extra-appsettings
           - mountPath: /tmp
             name: gateway-temp
-          {{- end }}
-          env:
-            {{- range $key, $value := include "gateway.extractEnvVars" . }}
-            - name: {{ $key }}
-              value: {{ $value | quote }}
-            {{- end }}
+          env: 
+            {{- include "gateway.env" . | nindent 12 }}
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ .Values.gateway.service.http.port }}
+              protocol: TCP
+            - name: ws
+              containerPort: {{ .Values.gateway.service.ws.port }}
               protocol: TCP
           resources:
             {{- toYaml .Values.gateway.resources | nindent 12 }}
-      {{- with .Values.nodeSelector }}
+      {{- with .Values.gateway.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.affinity }}
+      {{- with .Values.gateway.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.tolerations }}
+      {{- with .Values.gateway.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
