--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -1,112 +1,181 @@
-replicaCount: 1
-deploymentStrategy: "Recreate"
-server:
-  name: server
-  image:
-    repository: ghcr.io/gdatasoftwareag/scanserver
-    pullPolicy: Always
-    tag: 1.8.0
-  containerSecurityContext:
+gateway:
+  ingress:
     enabled: false
-client:
-  name: client
-  image:
-    repository: ghcr.io/gdatasoftwareag/scanclient
-    pullPolicy: Always
-    tag: 1.8.0
-  containerSecurityContext:
+    className: ""
+    annotations: {}
+    hosts:
+      - host: gateway.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+        service:
+          name: ""
+          port: 9090
+      - host: upload.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+        service:
+          name: ""
+          port: 8080              
+    tls: []
+
+  secret:
+    dockerconfigjson: ""
+
+  nameOverride: ""
+  fullnameOverride: ""
+    
+  networkPolicy:
     enabled: false
-terminationGracePeriodSeconds: 30
+    ingress: []
+    egress: []
 
-imagePullSecrets:
-  - name: scannerregistry
-
-nameOverride: ""
-fullnameOverride: ""
-
-podAnnotations: {}
-
-secret:
-  dockerconfigjson: ""
-
-service:
-  type: ""
-  port: 8080
-
-metrics:
-  servicemonitor:
+  service:
+    type: ""
+    http:
+      port: 8080
+    ws:
+      port: 9090
+  
+  metrics:
     enabled: false
     port: 8080
     path: /metrics
 
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-  hosts:
-    - host: scanner.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
+  autoscaling:
+    enabled: false
+    minReplicas: 2
+    maxReplicas: 20
+    targetCPU: 75
+    metrics:
 
-resources:
-  server:
+  podDisruptionBudget:
+    minAvailable: 1    
+  
+  replicaCount: 1
+  revisionHistoryLimit: 1
+  resources:
     limits:
-      memory: 2Gi
+      memory: 512Mi
     requests:
-      cpu: 2
-      memory: 2Gi
-  client:
-    limits:
-      memory: 128Mi
-    requests:
-      cpu: 1
-      memory: 128Mi
+      cpu: 0.5
+      memory: 256Mi  
 
-autoscaling:
-  enabled: false
-  minReplicas: 2
-  maxReplicas: 20
-  targetCPU: 75
-  metrics:
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
-
-persistence:
-  enabled: false
-  accessMode: ReadWriteOnce
-  memory: false
-  size: 5Gi
-  storageClass: ""
-
-autoUpdate:
-  image:
-    registry: docker.io
-    repository: bitnami/kubectl
-    tag: latest
   containerSecurityContext:
     enabled: false
-  enabled: true
-  # every hour
-  schedule: "0 * * * *"
-  networkPolicy:
+
+  image:
+    repository: ghcr.io/gdatasoftwareag/vaas/gateway
+    pullPolicy: Always
+    tag: latest
+
+  env:
+
+  imagePullSecrets: {}
+  podAnnotations: {}
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+  
+
+scanner:
+  replicaCount: 1
+  deploymentStrategy: "Recreate"
+  server:
+    name: server
+    image:
+      repository: ghcr.io/gdatasoftwareag/scanserver
+      pullPolicy: Always
+      tag: 1.8.0
+    containerSecurityContext:
+      enabled: false
+  client:
+    name: client
+    image:
+      repository: ghcr.io/gdatasoftwareag/scanclient
+      pullPolicy: Always
+      tag: 1.8.0
+    containerSecurityContext:
+      enabled: false
+  terminationGracePeriodSeconds: 30
+
+  imagePullSecrets:
+    - name: scannerregistry
+
+  nameOverride: ""
+  fullnameOverride: ""
+
+  podAnnotations: {}
+
+  secret:
+    dockerconfigjson: ""
+
+  service:
+    type: ""
+    port: 8080
+
+  metrics:
+    servicemonitor:
+      enabled: false
+      port: 8080
+      path: /metrics
+
+  ingress:
+    enabled: false
+    className: ""
+    annotations: {}
+    hosts:
+      - host: scanner.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+
+  resources:
+    server:
+      limits:
+        memory: 2Gi
+      requests:
+        cpu: 2
+        memory: 2Gi
+    client:
+      limits:
+        memory: 128Mi
+      requests:
+        cpu: 1
+        memory: 128Mi
+
+  autoscaling:
+    enabled: false
+    minReplicas: 2
+    maxReplicas: 20
+    targetCPU: 75
+    metrics:
+
+  nodeSelector: {}
+
+  tolerations: []
+
+  affinity: {}
+
+  persistence:
+    enabled: false
+    accessMode: ReadWriteOnce
+    memory: false
+    size: 5Gi
+    storageClass: ""
+
+  autoUpdate:
+    image:
+      registry: docker.io
+      repository: bitnami/kubectl
+      tag: latest
+    containerSecurityContext:
+      enabled: false
     enabled: true
-    k8sApiPort: 6443
-
-# values.yaml
-ingress:
-  hosts:
-    - name: host1.example.com
-      service:
-        name: service1
-        port: 8080
-    - name: host2.example.com
-      service:
-        name: service2
-        port: 9090
-
+    # every hour
+    schedule: "0 * * * *"
+    networkPolicy:
+      enabled: true
+      k8sApiPort: 6443
