chanhe structure again

--- a/charts/vaas/templates/gateway/secret.yaml
+++ b/charts/vaas/templates/gateway/secret.yaml
@@ -5,6 +5,6 @@ metadata:
   name: registry
   namespace: {{ .Release.Namespace }}
 data:
-  .dockerconfigjson: {{ required "You need to set the dockerconfigjson for the private registry" .Values.secret.dockerconfigjson }}
+  .dockerconfigjson: {{ required "You need to set the dockerconfigjson for the private registry" .Values.gateway.secret.dockerconfigjson }}
 type: kubernetes.io/dockerconfigjson
 {{- end -}}
