--- a/charts/vaas/templates/gateway/statefulset.yaml
+++ b/charts/vaas/templates/gateway/statefulset.yaml
@@ -22,10 +22,10 @@ spec:
       labels:
         {{- include "gateway.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.gateway.imagePullSecrets }}
       imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+        {{- range .Values.global.imagePullSecrets }}
+        - name: {{ . }}
+        {{- end }}
       volumes:
         - name: gateway-tmp
           emptyDir: {}
