--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -1,8 +1,10 @@
 global:
   imagePullSecrets: []
   vaasImageRegistry: "ghcr.io/gdatasoftwareag"
+  host: &vaasHost vaas
 
 mini-identity-provider:
+  issuer: http://vaas/auth
   enabled: true
   ingress:
     enabled: true
@@ -11,7 +13,7 @@ mini-identity-provider:
       nginx.ingress.kubernetes.io/rewrite-target: /$2
       nginx.ingress.kubernetes.io/x-forwarded-prefix: "/auth"
     hosts:
-    - host: vaas
+    - host: *vaasHost
       paths:
       - path: /auth(/|$)(.*)
         pathType: ImplementationSpecific
@@ -25,14 +27,14 @@ gateway:
     enabled: false
     annotations: {}
     hosts:
-      - host: gateway.local
+      - host: *vaasHost
         paths:
-          - path: /
+          - path: /ws
             pathType: ImplementationSpecific
             service:
               name: gateway
               port: 9090
-      - host: upload.local
+      - host: *vaasHost
         paths:
           - path: /
             pathType: ImplementationSpecific
