--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -1,12 +1,15 @@
 global:
-  imagePullSecrets: []
+  imagePullSecrets: 
+    - name: registry
   vaasImageRegistry: "ghcr.io/gdatasoftwareag"
   host: &vaasHost vaas
+  versionTag: &versionTag production-latest
 
 mini-identity-provider:
-  issuer: http://vaas/auth
+  issuer: "http://vaas/auth"
   enabled: true
   ingress:
+    className: nginx
     enabled: true
     annotations:
       nginx.ingress.kubernetes.io/use-regex: "true"
@@ -19,12 +22,34 @@ mini-identity-provider:
         pathType: ImplementationSpecific
         service:
           name: provider
-          port: 8080           
-    tls: []     
+          port: 8080
+    tls: []
+
+  image:
+    repository: ghcr.io/gdatasoftwareag/vaas/mini-identity-provider
+    pullPolicy: Always
+    tag: latest
+
+  service:
+    type: ClusterIP
+    http:
+      port: 8080
+
+  secret:
+    dockerconfigjson: ""
+
+  networkPolicy:
+    enabled: true
+
+  podAnnotations: {}
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
 
 gateway:
   ingress:
-    enabled: false
+    enabled: true
+    className: ""
     annotations: {}
     hosts:
       - host: *vaasHost
@@ -44,19 +69,19 @@ gateway:
     tls: []
 
   authentication:
-    authority: ""
+    authority: http://provider:8080/
 
   nameOverride: ""
   fullnameOverride: ""
 
   networkPolicy:
-    enabled: false
+    enabled: true
 
   secret:
     dockerconfigjson: ""
 
   service:
-    type: ""
+    type: ClusterIP
     http:
       port: 8080
     ws:
@@ -92,10 +117,14 @@ gateway:
   image:
     repository: ghcr.io/gdatasoftwareag/vaas/gateway
     pullPolicy: Always
-    tag: 1
+    # TODO: Push to production-latest and change to anchor
+    tag: 1.0.2
 
   cloudhashlookup:
     enabled: false
+
+  # Do not touch. Really. Just don't.
+  # This block is only for G DATA's internal usage.
   hashlookup:
     enabled: false
     apikey:
@@ -103,19 +132,116 @@ gateway:
   usageevents:
     enabled: false
   gdscanUrl: "http://gdscan:8080/scan/body"
-  uploadUrl: "http://localhost:8080/upload"
+  uploadUrl: "http://vaas/upload"
   options:
     url: "wss://gateway.production.vaas.gdatasecurity.de"
     tokenurl: "https://account.gdata.de/realms/vaas-production/protocol/openid-connect/token"
     credentials:
       granttype: "ClientCredentials"
       clientid: ""
+      # TODO: Secrify it
       clientsecret:
         value: ""
+
   podAnnotations: {}
   nodeSelector: {}
   tolerations: []
   affinity: {}
+
+#TODO: ImagePullSecret from Global
+gdscan:
+  replicaCount: 1
+  deploymentStrategy: "Recreate"
+  server:
+    name: server
+    image:
+      repository: ghcr.io/gdatasoftwareag/vaas/scanserver
+      pullPolicy: Always
+      tag: *versionTag
+    containerSecurityContext:
+      enabled: false
+  client:
+    name: client
+    image:
+      repository: ghcr.io/gdatasoftwareag/vaas/scanner
+      pullPolicy: Always
+      tag: *versionTag
+    containerSecurityContext:
+      enabled: false
+  terminationGracePeriodSeconds: 30
+
+  nameOverride: ""
+  fullnameOverride: "gdscan"
+
+  podAnnotations: {}
+
+  service:
+    type: "ClusterIP"
+    port: 8080
+
+  metrics:
+    servicemonitor:
+      enabled: false
+      port: 8080
+      path: /metrics
+
+  #TODO: Do we need Ingress for Gdscan?
+  ingress:
+    enabled: false
+    className: ""
+    annotations: {}
+    hosts:
+      - host: gdscan.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+
+  resources:
+    server:
+      limits:
+        memory: 2Gi
+      requests:
+        cpu: 0.15
+        memory: 2Gi
+    client:
+      limits:
+        memory: 1Gi
+      requests:
+        cpu: 1
+        memory: 512Mi
+
+  autoscaling:
+    enabled: false
+    minReplicas: 2
+    maxReplicas: 20
+    targetCPU: 75
+    metrics:
+
+  nodeSelector: {}
+
+  tolerations: []
+
+  affinity: {}
+
+  persistence:
+    enabled: true
+    size: 2Gi
+    accessMode: ReadWriteOnce
+
+  autoUpdate:
+    image:
+      registry: docker.io
+      repository: bitnami/kubectl
+      tag: latest
+    containerSecurityContext:
+      enabled: false
+    enabled: true
+    # every hour
+    schedule: "0 * * * *"
+    networkPolicy:
+      enabled: true
+      k8sApiPort: 6443
 
 redis:
   enabled: true
@@ -127,15 +253,13 @@ redis:
     disableCommands: []
     resources:
       limits:
-        cpu: "1"
-        memory: 512Mi
-      requests:
-        cpu: 500m
         memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 64Mi
     persistence:
       enabled: false
     containerSecurityContext:
-      enabled: true
-      readOnlyRootFilesystem: true
+      enabled: false
   networkPolicy:
     enabled: true
