fix handling with secrets & edit readme

--- a/charts/vaas/templates/gateway/statefulset.yaml
+++ b/charts/vaas/templates/gateway/statefulset.yaml
@@ -22,10 +22,7 @@ spec:
       labels:
         {{- include "gateway.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.gateway.imagePullSecrets }}
-      imagePullSecrets: 
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+      {{- include "gateway.imagePullSecrets" . | nindent 6 }}
       volumes:
         - name: gateway-tmp
           emptyDir: {}
