--- a/.github/chart-testing-config.yaml
+++ b/.github/chart-testing-config.yaml
@@ -2,3 +2,5 @@ chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami/
   - gdscan=https://gdatasoftwareag.github.io/gdscan/
   - oci-registry=oci://ghcr.io/gdatasoftwareag/
+helm-repo-extra-args:
+  - oci-registry=--username=GdataGithubBot
