--- a/.github/chart-testing-config.yaml
+++ b/.github/chart-testing-config.yaml
@@ -1,3 +1,4 @@
 chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami/
   - gdscan=https://gdatasoftwareag.github.io/gdscan/
+  - mipd=oci://ghcr.io/gdatasoftwareag/
