--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,8 +46,8 @@ jobs:
       - name: Push chart
         uses: appany/helm-oci-chart-releaser@v0.4.1
         with:
-          name: charts/vaas
-          repository: gdatasoftwareag
+          name: vaas
+          repository: gdatasoftwareag/charts
           tag: 1.0.0
           path: charts/vaas
           registry: ghcr.io
